welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:3: error: value ||! is not a member of Boolean
	if (vacation||!weekday) x=true
                    ^